import Foundation

/// Use to manage segments on Stock View Controller
enum StockSegments: String {
    case trending = "Trending"
    case favourite = "Favourite"
}
