...
        
        // Search Text Field
        let searchTextField = searchBar.searchTextField
        searchTextField.backgroundColor = UIColor.Custom.Brand.main
        searchTextField.textColor = UIColor.Custom.Text.main
        searchTextField.attributedPlaceholder = NSAttributedString(
            string: "Ticker or company name",
            attributes: [NSAttributedString.Key.foregroundColor: UIColor.Custom.Text.secondary]
        )
        
        if let glassIconView = searchTextField.leftView as? UIImageView {
            glassIconView.image = glassIconView.image?.withRenderingMode(.alwaysTemplate)
            glassIconView.tintColor = UIColor.Custom.Text.main
...
